--- a/src/main/webapp/developers.html
+++ b/src/main/webapp/developers.html
@@ -22,7 +22,7 @@
         <div class="row mb-5 justify-content-md-center">
             <a href="index.html"
                 class="text-decoration-none navSection col text-center d-flex justify-content-center align-items-center">
-                <div class="textoNegro text-center fs-2">Inicio</div>
+                <div class="textoNegro text-center fs-2">Home</div>
             </a>
             <a href="https://api-electronicdevices-313314.nw.r.appspot.com/docs/index.html"
                 class="text-decoration-none navSection col text-center d-flex justify-content-center align-items-center">
@@ -30,7 +30,7 @@
             </a>
             <a href="developers.html"
                 class="text-decoration-none navSection col text-center d-flex justify-content-center align-items-center">
-                <div class="textoNegro text-center fs-2">Desarrolladores</div>
+                <div class="textoNegro text-center fs-2">Developers</div>
             </a>
         </div>
     </nav>
